logo and company name alignment fixed as per requirement

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,10 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   z-index: 997;
   padding: 15px 0;
+  height: 8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #header.header-scrolled, #header.header-inner-pages {
@@ -135,7 +139,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 6rem;
 }
 
 /*--------------------------------------------------------------
